Add section with slp results

--- a/3-text/resources/furrow.bib
+++ b/3-text/resources/furrow.bib
@@ -233,6 +233,42 @@
   language = {en}
 }
 
+@ARTICLE{Andrioli2004-qi,
+  title = {Groucho-dependent repression by Sloppy-paired 1 differentially
+  positions anterior pair-rule stripes in the \textit{{D}rosophila} embryo},
+  author = {Andrioli, Luiz P and Oberstein, Adam L and Corado, Maria S G and Yu,
+  Danyang and Small, Stephen},
+  journaltitle = {Dev. Biol.},
+  volume = {276},
+  issue = {2},
+  pages = {541--551},
+  date = {2004-12-15},
+  doi = {10.1016/j.ydbio.2004.09.025},
+  issn = {0012-1606},
+  url = {http://www.sciencedirect.com/science/article/pii/S0012160604006621},
+  keywords = {Pair-rule genes; Engrailed; Groucho;Cephalic
+  furrow;Mutants;Cephalic furrow mechanics;Drosophila;foxG = sloppy
+  paired;important}
+}
+
+@ARTICLE{Andrioli2012-fv,
+  title = {Huckebein is part of a combinatorial repression code in the anterior
+  blastoderm},
+  author = {Andrioli, Luiz Paulo and Digiampietri, Luciano Antonio and de
+  Barros, Lilian Ponce and Machado-Lima, Ariane},
+  journaltitle = {Dev. Biol.},
+  volume = {361},
+  issue = {1},
+  pages = {177--185},
+  date = {2012-01-01},
+  doi = {10.1016/j.ydbio.2011.10.016},
+  pmid = {22027434},
+  issn = {0012-1606,1095-564X},
+  url = {http://dx.doi.org/10.1016/j.ydbio.2011.10.016},
+  keywords = {Cephalic furrow mechanics;foxG = sloppy paired},
+  language = {en}
+}
+
 @ARTICLE{Rueden2017-ky,
   title = {ImageJ2: ImageJ for the next generation of scientific image data},
   author = {Rueden, Curtis T and Schindelin, Johannes and Hiner, Mark C and
@@ -1183,6 +1219,29 @@
   doi = {10.5281/zenodo.7781916},
   url = {https://zenodo.org/record/7781916},
   keywords = {Supporting datasets;Cephalic furrow mechanics}
+}
+
+@ARTICLE{Cadigan1994-hz,
+  title = {Localized expression of \textit{sloppy paired} protein maintains the
+  polarity of \textit{Drosophila} parasegments},
+  author = {Cadigan, K M and Grossniklaus, U and Gehring, W J},
+  journaltitle = {Genes Dev.},
+  volume = {8},
+  issue = {8},
+  pages = {899--913},
+  date = {1994-04-15},
+  doi = {10.1101/gad.8.8.899},
+  pmid = {7926775},
+  issn = {0890-9369},
+  url = {http://dx.doi.org/10.1101/gad.8.8.899},
+  note = {and},
+  keywords = {1994; 2; a paradigm for the; engrailed; forkhead domain; in the
+  drosophila; melanogaster embryo has become; received january 20; revised
+  version accepted march; segment polarity; sloppy paired; the establishment of
+  segmentation; wingless;Segmentation in brachiopod larvae/Segment
+  polarity;Manuscript;Segment polarity genes;Mutants;Molecular
+  patterning;Cephalic furrow mechanics;foxG = sloppy paired;to be read},
+  language = {en}
 }
 
 @ARTICLE{Newman2000-oz,
