--- a/3-text/resources/furrow.bib
+++ b/3-text/resources/furrow.bib
@@ -15,6 +15,16 @@
   language = {en}
 }
 
+@UNPUBLISHED{Dey2023-pj,
+  title = {Transient epithelial folding and out-of-plane division are
+  genetically patterned mechanical sinks that release compressive stress
+  resulting from tissue tectonic collision},
+  author = {Dey, Bipasha and Kaul, Verena and Kale, Girish and Scorcelletti,
+  Maily and Takeda, Michiko and Wang, Yu-Chiun and Lemke, Steffen},
+  date = {2023},
+  keywords = {Cephalic furrow mechanics}
+}
+
 @BOOK{Campos-Ortega1985-ma,
   title = {The Embryonic Development of \textit{{D}rosophila {m}elanogaster}},
   author = {Campos-Ortega, José A and Hartenstein, Volker},
