Add references to Drosophila in situ databases

--- a/3-text/resources/furrow.bib
+++ b/3-text/resources/furrow.bib
@@ -206,6 +206,46 @@
   language = {en}
 }
 
+@ARTICLE{Tomancak2002-yf,
+  title = {Systematic determination of patterns of gene expression during
+  {\textit{D}}\textit{rosophila} embryogenesis},
+  author = {Tomancak, Pavel and Beaton, Amy and Weiszmann, Richard and Kwan,
+  Elaine and Shu, Shengqiang and Lewis, Suzanna E and Richards, Stephen and
+  Ashburner, Michael and Hartenstein, Volker and Celniker, Susan E and Rubin,
+  Gerald M},
+  journaltitle = {Genome Biol.},
+  volume = {3},
+  issue = {12},
+  pages = {RESEARCH0088},
+  date = {2002-12-23},
+  doi = {10.1186/gb-2002-3-12-research0088},
+  pmc = {PMC151190},
+  pmid = {12537577},
+  issn = {1465-6906},
+  url = {https://genomebiology.biomedcentral.com/articles/10.1186/gb-2002-3-12-research0088},
+  keywords = {Cephalic furrow mechanics},
+  language = {en}
+}
+
+@ARTICLE{Lecuyer2007-uy,
+  title = {Global analysis of {mRNA} localization reveals a prominent role in
+  organizing cellular architecture and function},
+  author = {Lécuyer, Eric and Yoshida, Hideki and Parthasarathy, Neela and Alm,
+  Christina and Babak, Tomas and Cerovina, Tanja and Hughes, Timothy R and
+  Tomancak, Pavel and Krause, Henry M},
+  journaltitle = {Cell},
+  volume = {131},
+  issue = {1},
+  pages = {174--187},
+  date = {2007-10-05},
+  doi = {10.1016/j.cell.2007.08.003},
+  pmid = {17923096},
+  issn = {0092-8674},
+  url = {http://linkinghub.elsevier.com/retrieve/pii/S0092-8674(07)01022-7},
+  keywords = {Cephalic furrow mechanics},
+  language = {en}
+}
+
 @ARTICLE{Simeone1992-ny,
   title = {Nested expression domains of four homeobox genes in developing
   rostral brain},
@@ -221,6 +261,26 @@
   issn = {0028-0836},
   url = {http://dx.doi.org/10.1038/358687a0},
   keywords = {Head-Trunk Boundary;Cephalic furrow mechanics},
+  language = {en}
+}
+
+@ARTICLE{Tomancak2007-db,
+  title = {Global analysis of patterns of gene expression during
+  {\textit{D}}\textit{rosophila} embryogenesis},
+  author = {Tomancak, Pavel and Berman, Benjamin P and Beaton, Amy and
+  Weiszmann, Richard and Kwan, Elaine and Hartenstein, Volker and Celniker,
+  Susan E and Rubin, Gerald M},
+  journaltitle = {Genome Biol.},
+  volume = {8},
+  issue = {7},
+  pages = {R145},
+  date = {2007},
+  doi = {10.1186/gb-2007-8-7-r145},
+  pmc = {PMC2323238},
+  pmid = {17645804},
+  issn = {1465-6906},
+  url = {http://genomebiology.biomedcentral.com/articles/10.1186/gb-2007-8-7-r145},
+  keywords = {Cephalic furrow mechanics},
   language = {en}
 }
 
