Fix some reference formatting

--- a/3-text/resources/furrow.bib
+++ b/3-text/resources/furrow.bib
@@ -998,7 +998,7 @@
 
 @ARTICLE{Legland2016-cp,
   title = {MorphoLibJ: integrated library and plugins for mathematical
-  morphology with ImageJ},
+  morphology with {I}mage{J}},
   author = {Legland, David and Arganda-Carreras, Ignacio and Andrey, Philippe},
   journaltitle = {Bioinformatics},
   volume = {32},
@@ -1008,7 +1008,7 @@
   doi = {10.1093/bioinformatics/btw413},
   pmid = {27412086},
   issn = {1367-4803,1367-4811},
-  url = {http://dx.doi.org/10.1093/bioinformatics/btw413},
+  url = {https://academic.oup.com/bioinformatics/article-lookup/doi/10.1093/bioinformatics/btw413},
   keywords = {Cephalic furrow mechanics},
   language = {en}
 }
@@ -1293,7 +1293,7 @@
 
 @ARTICLE{Cadigan1994-hz,
   title = {Localized expression of \textit{sloppy paired} protein maintains the
-  polarity of \textit{Drosophila} parasegments},
+  polarity of {\textit{D}}\textit{rosophila} parasegments},
   author = {Cadigan, K M and Grossniklaus, U and Gehring, W J},
   journaltitle = {Genes Dev.},
   volume = {8},
@@ -1303,7 +1303,7 @@
   doi = {10.1101/gad.8.8.899},
   pmid = {7926775},
   issn = {0890-9369},
-  url = {http://dx.doi.org/10.1101/gad.8.8.899},
+  url = {http://www.genesdev.org/cgi/pmidlookup?view=long&pmid=7926775},
   note = {and},
   keywords = {1994; 2; a paradigm for the; engrailed; forkhead domain; in the
   drosophila; melanogaster embryo has become; received january 20; revised
