Add missing references after methods update

--- a/3-text/resources/furrow.bib
+++ b/3-text/resources/furrow.bib
@@ -498,6 +498,27 @@
   language = {en}
 }
 
+@ARTICLE{Choi2018-fg,
+  title = {Third-generation \textit{in situ} hybridization chain reaction:
+  multiplexed, quantitative, sensitive, versatile, robust},
+  author = {Choi, Harry M T and Schwarzkopf, Maayan and Fornace, Mark E and
+  Acharya, Aneesh and Artavanis, Georgios and Stegmaier, Johannes and Cunha,
+  Alexandre and Pierce, Niles A},
+  journaltitle = {Development},
+  volume = {145},
+  issue = {12},
+  date = {2018-06-26},
+  doi = {10.1242/dev.165753},
+  pmc = {PMC6031405},
+  pmid = {29945988},
+  issn = {0950-1991,1477-9129},
+  url = {http://dev.biologists.org/cgi/pmidlookup?view=long&pmid=29945988},
+  keywords = {Automatic background suppression; In situ HCR v3.0; Multiplexed
+  quantitative in situ hybridization; dHCR imaging; qHCR flow cytometry; qHCR
+  imaging;Cephalic furrow mechanics;methods},
+  language = {en}
+}
+
 @INBOOK{Schmied2016-oq,
   title = {Sample Preparation and Mounting of Drosophila Embryos for Multiview
   Light Sheet Microscopy},
@@ -1046,6 +1067,24 @@
   language = {en}
 }
 
+@ARTICLE{Garcia-Solache2010-lz,
+  title = {A systematic analysis of the gap gene system in the moth midge
+  Clogmia albipunctata},
+  author = {García-Solache, Mónica and Jaeger, Johannes and Akam, Michael},
+  journaltitle = {Dev. Biol.},
+  publisher = {Elsevier},
+  volume = {344},
+  issue = {1},
+  pages = {306--318},
+  date = {2010-08-01},
+  doi = {10.1016/j.ydbio.2010.04.019},
+  pmid = {20433825},
+  issn = {0012-1606,1095-564X},
+  url = {http://dx.doi.org/10.1016/j.ydbio.2010.04.019},
+  keywords = {Cephalic furrow mechanics;Clogmia},
+  language = {en}
+}
+
 @ARTICLE{Keller2012-ca,
   title = {Physical Biology Returns to Morphogenesis},
   author = {Keller, Ray},
@@ -1137,6 +1176,24 @@
   url = {https://ieeexplore.ieee.org/document/9387490},
   urldate = {2023-02-13},
   keywords = {Cephalic furrow mechanics}
+}
+
+@ARTICLE{Sander1985-sg,
+  title = {Experimental egg activation in lower dipterans ({P}sychoda,
+  {S}mittia) by low osmolality},
+  author = {Sander, Klaus},
+  journaltitle = {Int. J. Invertebr. Reprod. Dev.},
+  publisher = {Taylor \& Francis},
+  volume = {8},
+  issue = {3},
+  pages = {175--183},
+  date = {1985-06-01},
+  doi = {10.1080/01688170.1985.10510141},
+  issn = {0168-8170},
+  url = {https://www.tandfonline.com/doi/abs/10.1080/01688170.1985.10510141},
+  urldate = {2023-04-24},
+  keywords = {Cephalic furrow mechanics;Clogmia},
+  language = {en}
 }
 
 @MANUAL{Vellutini2022-ya,
