Add reference for phylogenetic tree

--- a/3-text/resources/furrow.bib
+++ b/3-text/resources/furrow.bib
@@ -1046,6 +1046,30 @@
   keywords = {Brachiopod wnt landscape;Cephalic furrow mechanics}
 }
 
+@ARTICLE{Wiegmann2011-ou,
+  title = {Episodic radiations in the fly tree of life},
+  author = {Wiegmann, Brian M and Trautwein, Michelle D and Winkler, Isaac S and
+  Barr, Norman B and Kim, Jung-Wook and Lambkin, Christine and Bertone, Matthew
+  A and Cassel, Brian K and Bayless, Keith M and Heimberg, Alysha M and Wheeler,
+  Benjamin M and Peterson, Kevin J and Pape, Thomas and Sinclair, Bradley J and
+  Skevington, Jeffrey H and Blagoderov, Vladimir and Caravas, Jason and Kutty,
+  Sujatha Narayanan and Schmidt-Ott, Urs and Kampmeier, Gail E and Thompson, F
+  Christian and Grimaldi, David A and Beckenbach, Andrew T and Courtney, Gregory
+  W and Friedrich, Markus and Meier, Rudolf and Yeates, David K},
+  journaltitle = {Proc. Natl. Acad. Sci. U. S. A.},
+  volume = {108},
+  issue = {14},
+  pages = {5690--5695},
+  date = {2011-04-05},
+  doi = {10.1073/pnas.1012675108},
+  pmc = {PMC3078341},
+  pmid = {21402926},
+  issn = {0027-8424,1091-6490},
+  url = {http://dx.doi.org/10.1073/pnas.1012675108},
+  keywords = {Cephalic furrow mechanics;important},
+  language = {en}
+}
+
 @ARTICLE{Jimenez-Guri2014-zs,
   title = {A staging scheme for the development of the moth midge
   \textit{{C}logmia albipunctata}},
