Update reference to Dey et al.

--- a/3-text/resources/furrow.bib
+++ b/3-text/resources/furrow.bib
@@ -16,11 +16,11 @@
 }
 
 @UNPUBLISHED{Dey2023-pj,
-  title = {Transient epithelial folding and out-of-plane division are
-  genetically patterned mechanical sinks that release compressive stress
-  resulting from tissue tectonic collision},
+  title = {Divergent evolutionary strategies prevent tissue collision in fly
+  gastrulation},
   author = {Dey, Bipasha and Kaul, Verena and Kale, Girish and Scorcelletti,
   Maily and Takeda, Michiko and Wang, Yu-Chiun and Lemke, Steffen},
+  journaltitle = {bioRxiv},
   date = {2023},
   keywords = {Cephalic furrow mechanics}
 }
