Update citation to companion paper

--- a/3-text/resources/furrow.bib
+++ b/3-text/resources/furrow.bib
@@ -16,7 +16,7 @@
 }
 
 @UNPUBLISHED{Dey2023-pj,
-  title = {Divergent evolutionary strategies prevent tissue collision in fly
+  title = {Divergent evolutionary strategies preempt tissue collision in fly
   gastrulation},
   author = {Dey, Bipasha and Kaul, Verena and Kale, Girish and Scorcelletti,
   Maily and Takeda, Michiko and Wang, Yu-Chiun and Lemke, Steffen},
