Plot MD vs EF relative timing, first version

--- a/1-analyses/germband-extension/germband.Rmd
+++ b/1-analyses/germband-extension/germband.Rmd
@@ -248,12 +248,11 @@ two different moments: initial infolding/buckling (buck) and deepest point
 
 ```{r plot-gb-pct}
 ggplot(gblong, aes(stock, gb_pct, fill = zygosity)) +
-  geom_violin(draw_quantiles = c("0.5"), show.legend = TRUE, trim = TRUE, alpha = 0.7, scale = "count", adjust = 2) +
-  geom_point(alpha = 0.8, size = 2, show.legend = TRUE, position = position_jitterdodge(dodge.width = 1, jitter.width = 0.1)) +
-  scale_fill_manual(values=c("#56b4e9", "#e69f03", "#cc79a7")) +
-  scale_color_manual(values=c("#56b4e9", "#e69f03", "#cc79a7")) +
-  labs(title = "Ectopic folding by germ band position",
-       x = "stocks", y = "germ band extension (%)") +
+  geom_boxplot(aes(color = zygosity), show.legend = TRUE, alpha = 0.5, outlier.shape = NA, width = 0.7, position = position_dodge(width = 1.0)) +
+  geom_point(alpha = 0.8, size = 3, show.legend = TRUE, position = position_beeswarm(priority = "descending", dodge.width = 1.0, cex = 6)) +
+  scale_fill_manual(values=c("#cc79a7", "#56b4e9", "#e69f03")) +
+  scale_color_manual(values=c("#cc79a7", "#56b4e9", "#e69f03")) +
+  labs(x = "stocks", y = "germ band extension (%)") +
   facet_grid(rows = vars(status), cols = vars(stock), scales = "free") +
   theme_classic(base_family = "DejaVu Sans") +
   theme(text = element_text(size = 35),
@@ -262,20 +261,19 @@ ggplot(gblong, aes(stock, gb_pct, fill = zygosity)) +
         strip.background = element_blank(),
         panel.background = element_rect(colour = "black", size=1)
         )
-ggsave("2-plots/gb_pct.png", width = 15, height = 8)
-ggsave("2-plots/gb_pct.svg", width = 15, height = 8)
+ggsave("2-plots/gb_pct.png", width = 15, height = 12)
+ggsave("2-plots/gb_pct.svg", width = 15, height = 12)
 ```
 
 Second, we plot the time after gastrulation (min).
 
 ```{r plot-gb-time}
-ggplot(gblong, aes(stock, gb_time, fill = zygosity)) +
-  geom_violin(draw_quantiles = c("0.5"), show.legend = TRUE, trim = TRUE, alpha = 0.7, scale = "count", adjust = 2) +
-  geom_point(alpha = 0.8, size = 2, show.legend = TRUE, position = position_jitterdodge(dodge.width = 1, jitter.width = 0.1)) +
-  scale_fill_manual(values=c("#56b4e9", "#e69f03", "#cc79a7")) +
-  scale_color_manual(values=c("#56b4e9", "#e69f03", "#cc79a7")) +
-  labs(title = "Ectopic folding by time after gastrulation",
-       x = "stocks", y = "time after gastrulation (min)") +
+ggplot(gblong, aes(stock, time, fill = zygosity)) +
+  geom_boxplot(aes(color = zygosity), show.legend = TRUE, alpha = 0.5, outlier.shape = NA, width = 0.7, position = position_dodge(width = 1.0)) +
+  geom_point(alpha = 0.8, size = 3, show.legend = TRUE, position = position_beeswarm(priority = "descending", dodge.width = 1.0, cex = 6)) +
+  scale_fill_manual(values=c("#cc79a7", "#56b4e9", "#e69f03")) +
+  scale_color_manual(values=c("#cc79a7", "#56b4e9", "#e69f03")) +
+  labs(x = "stocks", y = "time after gastrulation (min)") +
   facet_grid(rows = vars(status), cols = vars(stock), scales = "free") +
   theme_classic(base_family = "DejaVu Sans") +
   theme(text = element_text(size = 35),
@@ -284,8 +282,8 @@ ggplot(gblong, aes(stock, gb_time, fill = zygosity)) +
         strip.background = element_blank(),
         panel.background = element_rect(colour = "black", size=1)
         )
-ggsave("2-plots/gb_time.png", width = 15, height = 8)
-ggsave("2-plots/gb_time.svg", width = 15, height = 8)
+ggsave("2-plots/gb_time.png", width = 15, height = 12)
+ggsave("2-plots/gb_time.svg", width = 15, height = 12)
 ```
 
 ## Main figure plots
@@ -295,11 +293,11 @@ is the initial buckling/infolding relative to GB position and time after
 gastrulation. First the germ band extension percentage:
 
 ```{r plot-gb-pct-buck}
-ggplot(gblong[gblong$status == "buck",], aes(stock, gb_pct, fill = zygosity)) +
+ggplot(gblong[gblong$status == "tf_buck",], aes(stock, gb_pct, fill = zygosity)) +
   geom_boxplot(aes(color = zygosity), show.legend = FALSE, alpha = 0.5, outlier.shape = NA, width = 0.7, position = position_dodge(width = 1.0)) +
   geom_point(alpha = 0.8, size = 3, show.legend = FALSE, position = position_beeswarm(priority = "descending", dodge.width = 1.0, cex = 6)) +
-  scale_fill_manual(values=c("#56b4e9", "#e69f03", "#cc79a7")) +
-  scale_color_manual(values=c("#56b4e9", "#e69f03", "#cc79a7")) +
+  scale_fill_manual(values=c("#cc79a7", "#56b4e9", "#e69f03")) +
+  scale_color_manual(values=c("#cc79a7", "#56b4e9", "#e69f03")) +
   labs(x = "stocks", y = "germ band extension (%)") +
   facet_grid(cols = vars(stock), scales = "free") +
   theme_classic(base_family = "DejaVu Sans") +
@@ -314,11 +312,11 @@ ggsave("2-plots/gb_pct_buck.svg", width = 12, height = 4)
 Then the time after gastrulation:
 
 ```{r plot-gb-time-buck}
-ggplot(gblong[gblong$status == "buck",], aes(stock, gb_time, fill = zygosity)) +
+ggplot(gblong[gblong$status == "tf_buck",], aes(stock, time, fill = zygosity)) +
   geom_boxplot(aes(color = zygosity), show.legend = FALSE, alpha = 0.5, outlier.shape = NA, width = 0.7, position = position_dodge(width = 1.0)) +
   geom_point(alpha = 0.8, size = 3, show.legend = FALSE, position = position_beeswarm(priority = "descending", dodge.width = 1.0, cex = 6)) +
-  scale_fill_manual(values=c("#56b4e9", "#e69f03", "#cc79a7")) +
-  scale_color_manual(values=c("#56b4e9", "#e69f03", "#cc79a7")) +
+  scale_fill_manual(values=c("#cc79a7", "#56b4e9", "#e69f03")) +
+  scale_color_manual(values=c("#cc79a7", "#56b4e9", "#e69f03")) +
   labs(x = "stocks", y = "time after gastrulation (min)") +
   facet_grid(cols = vars(stock), scales = "free") +
   theme_classic(base_family = "DejaVu Sans") +
@@ -330,17 +328,68 @@ ggsave("2-plots/gb_time_buck.png", width = 12, height = 4)
 ggsave("2-plots/gb_time_buck.svg", width = 12, height = 4)
 ```
 
+Buck vs MD time
+
+```{r plot-gb-time-buck}
+ggplot(gblong[(gblong$status %in% c("tf_buck", "md_start") & gblong$stock != "prd"),], aes(status, time, fill = zygosity)) +
+  geom_boxplot(aes(color = zygosity), show.legend = FALSE, alpha = 0.5, outlier.shape = NA, width = 0.7, position = position_dodge(width = 1.0)) +
+  #geom_point(alpha = 0.8, size = 3, show.legend = FALSE, position = position_beeswarm(priority = "descending", dodge.width = 1.0, cex = 6)) +
+  geom_point(alpha = 0.8, size = 3, show.legend = FALSE) +
+  geom_line(aes(group = embryo)) +
+  scale_fill_manual(values=c("#cc79a7", "#56b4e9", "#e69f03")) +
+  scale_color_manual(values=c("#cc79a7", "#56b4e9", "#e69f03")) +
+  labs(x = "zygosity", y = "time after gastrulation (min)") +
+  facet_grid(cols = vars(zygosity), scales = "free") +
+  theme_classic(base_family = "DejaVu Sans") +
+  theme(text = element_text(size = 35),
+        strip.background = element_blank(),
+        panel.background = element_rect(colour = "black", size=1)
+        )
+ggsave("2-plots/gb_time_tf_buck_md_start.png", width = 12, height = 4)
+ggsave("2-plots/gb_time_tf_buck_md_start.svg", width = 12, height = 4)
+```
+
+```{r plot-gb-time-buck}
+ggplot(gblong[(gblong$status %in% c("tf_buck", "md_start") & gblong$stock != "prd"),], aes(status, gb_pct, fill = zygosity)) +
+  geom_boxplot(aes(color = zygosity), show.legend = FALSE, alpha = 0.5, outlier.shape = NA, width = 0.7, position = position_dodge(width = 1.0)) +
+  #geom_point(alpha = 0.8, size = 3, show.legend = FALSE, position = position_beeswarm(priority = "descending", dodge.width = 1.0, cex = 6)) +
+  geom_point(alpha = 0.8, size = 3, show.legend = FALSE) +
+  geom_line(aes(group = embryo)) +
+  scale_fill_manual(values=c("#cc79a7", "#56b4e9", "#e69f03")) +
+  scale_color_manual(values=c("#cc79a7", "#56b4e9", "#e69f03")) +
+  labs(x = "zygosity", y = "germ band extension (%)") +
+  facet_grid(cols = vars(zygosity), scales = "free") +
+  theme_classic(base_family = "DejaVu Sans") +
+  theme(text = element_text(size = 35),
+        strip.background = element_blank(),
+        panel.background = element_rect(colour = "black", size=1)
+        )
+ggsave("2-plots/gb_pct_tf_buck_md_start.png", width = 12, height = 4)
+ggsave("2-plots/gb_pct_tf_buck_md_start.svg", width = 12, height = 4)
+```
+
+## Tests
+
+```{r tests}
+# TODO: Create the relevant tests for testing relevant differences
+wilcox.test(
+  gblong[(gblong$status == "tf_buck" & gblong$stock != "prd" & gblong$zygosity == "homozygote"),]$time,
+  gblong[(gblong$status == "md_start" & gblong$stock != "prd" & gblong$zygosity == "homozygote"),]$time,
+  paired = TRUE
+)
+```
+
 ## Supplementary plots
 
 The deepest point plots are not super informative and will go into the
 supplementary.
 
 ```{r plot-gb-pct-deep}
-ggplot(gblong[gblong$status == "deep",], aes(stock, gb_pct, fill = zygosity)) +
+ggplot(gblong[gblong$status == "tf_deep",], aes(stock, gb_pct, fill = zygosity)) +
   geom_boxplot(aes(color = zygosity), show.legend = FALSE, alpha = 0.5, outlier.shape = NA, width = 0.7, position = position_dodge(width = 1.0)) +
   geom_point(alpha = 0.8, size = 3, show.legend = FALSE, position = position_beeswarm(priority = "descending", dodge.width = 1.0, cex = 6)) +
-  scale_fill_manual(values=c("#56b4e9", "#e69f03", "#cc79a7")) +
-  scale_color_manual(values=c("#56b4e9", "#e69f03", "#cc79a7")) +
+  scale_fill_manual(values=c("#cc79a7", "#56b4e9", "#e69f03")) +
+  scale_color_manual(values=c("#cc79a7", "#56b4e9", "#e69f03")) +
   labs(x = "stocks", y = "germ band extension (%)") +
   facet_grid(cols = vars(stock), scales = "free") +
   theme_classic(base_family = "DejaVu Sans") +
@@ -355,11 +404,11 @@ ggsave("2-plots/gb_pct_deep.svg", width = 12, height = 4)
 ```
 
 ```{r plot-gb-time-deep}
-ggplot(gblong[gblong$status == "deep",], aes(stock, gb_time, fill = zygosity)) +
+ggplot(gblong[gblong$status == "tf_deep",], aes(stock, time, fill = zygosity)) +
   geom_boxplot(aes(color = zygosity), show.legend = FALSE, alpha = 0.5, outlier.shape = NA, width = 0.7, position = position_dodge(width = 1.0)) +
   geom_point(alpha = 0.8, size = 3, show.legend = FALSE, position = position_beeswarm(priority = "descending", dodge.width = 1.0, cex = 6)) +
-  scale_fill_manual(values=c("#56b4e9", "#e69f03", "#cc79a7")) +
-  scale_color_manual(values=c("#56b4e9", "#e69f03", "#cc79a7")) +
+  scale_fill_manual(values=c("#cc79a7", "#56b4e9", "#e69f03")) +
+  scale_color_manual(values=c("#cc79a7", "#56b4e9", "#e69f03")) +
   labs(x = "stocks", y = "time after gastrulation (min)") +
   facet_grid(cols = vars(stock), scales = "free") +
   theme_classic(base_family = "DejaVu Sans") +
@@ -371,4 +420,23 @@ ggplot(gblong[gblong$status == "deep",], aes(stock, gb_time, fill = zygosity)) +
         )
 ggsave("2-plots/gb_time_deep.png", width = 12, height = 4)
 ggsave("2-plots/gb_time_deep.svg", width = 12, height = 4)
+```
+
+```{r plot-gb-time-buck}
+ggplot(gblong[gblong$status %in% c("tf_buck", "md_start"),], aes(status, time, fill = zygosity)) +
+  geom_boxplot(aes(color = zygosity), show.legend = FALSE, alpha = 0.5, outlier.shape = NA, width = 0.7, position = position_dodge(width = 1.0)) +
+  geom_point(alpha = 0.8, size = 3, show.legend = FALSE, position = position_beeswarm(priority = "descending", dodge.width = 1.0, cex = 6)) +
+  #geom_line(aes(group = embryo)) +
+  scale_fill_manual(values=c("#cc79a7", "#56b4e9", "#e69f03")) +
+  scale_color_manual(values=c("#cc79a7", "#56b4e9", "#e69f03")) +
+  labs(x = "stocks", y = "time after gastrulation (min)") +
+  #facet_grid(cols = vars(zygosity), scales = "free") +
+  facet_grid(cols = vars(zygosity), rows = vars(stock), scales = "free") +
+  theme_classic(base_family = "DejaVu Sans") +
+  theme(text = element_text(size = 35),
+        strip.background = element_blank(),
+        panel.background = element_rect(colour = "black", size=1)
+        )
+ggsave("2-plots/gb_time_tf_buck_md_start_by_stock.png", width = 12, height = 12)
+ggsave("2-plots/gb_time_tf_buck_md_start_by_stock.svg", width = 12, height = 12)
 ```
